Fix overflow x bug

--- a/css/about.css
+++ b/css/about.css
@@ -70,6 +70,10 @@ hr {
 .footer {
   background-color: #f6ecb979;
 }
+
+.columns:last-child {
+  width: 100%;
+}
 /* media query */
 
 @media screen and (max-width: 768px) {
